<resources>
    <string name="app_name">MoneyControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="nav_header_title">Money Control</string>
    <string name="nav_header_subtitle">Here you can manage your money!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="email">Email</string>
    <string name="register">Not a Member yet? Sign Up here.</string>
    <string name="register_button">Register</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="balance">Balance</string>
    <string name="last_records">Last Records Overview</string>
</resources>
